# jiajia-search

./: LICENSE  README.md  README_CN.md  README_EN.md  demo.py  pyproject.toml
src/jiajia_search/: __init__.py  config.py  embedding.py  fusion.py  pipeline.py  rerank.py  retrieval.py  utils.py
src/jiajia_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
