[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# 包名（pip install 这个名字）
name = "jiajia-search"
# 版本号（每次更新打包改这个）
version = "0.1.1"
# 项目描述
description = "多语言轻量级高性能混合检索引擎，专为RAG全链路检索&重排设计"
readme = "README.md"
license = { file = "LICENSE" }
# 作者信息（改这里）
authors = [{ name="jiangnanboy", email="2229029156@qq.com" }]
# 支持的Python版本
requires-python = ">=3.9"
# 🔥 所有依赖（pip自动安装）
dependencies = [
    "jieba>=0.42.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "fastembed>=0.2.0",
    "rank-bm25>=0.2.2"
]
# 分类信息
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/jiangnanboy/jiajia-search"